<resources>
    <string name="app_name">pcd\'s Blog</string>
    <string name="blog">Blog</string>

    <string name="blog_userName">pcd\'s Blog</string>
    <string name="blog_title">curry</string>
    <string name="user_introduce">欢迎来到我的博客</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="icon">icon</string>
    <string name="tags">数据库</string>
    <string name="about_userName">pcd\'s blog</string>
    <string name="about_log">日志</string>
    <string name="about_label">标签</string>
    <string name="article_num">1</string>
    <string name="about_article">文章</string>
    <string name="about_location">山西 CN</string>
    <string name="label_num">2</string>
    <string name="log_num">3</string>
    <string name="about_selfIntroduce">我是一名JavaScript开发人员，从事一些JavaScript开源项目，学习一些JavaScript编码技能并分享我的JavaScript编码经验</string>
    <string name="about_me">在2018年，当时我的一位老师给了我C ++ Primer Plus，然后我开始编写代码。我寻找了如何开始在线编码的方法，并从中学习了HTML和C ++。 自2018年夏天以来，我开始从事开源项目的工作。但是我于2019年加入GitHub。</string>
    <string name="about_technology">\@pcd</string>
</resources>